cmake_minimum_required(VERSION 2.8.12)
project(lunarcalendar)
cmake_policy(SET CMP0015 NEW)
include_directories(include)
set (PROJECT_LINK_LIBS libLunarCalendar.so)
#set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ../libs)
link_directories(libs)
#set(SOURCES src/mainapp.cpp src/greetings_en.cpp src/greetings_ja.cpp src/greetings_fr.cpp)
file(GLOB SOURCES "src/ldate.cpp")
file(GLOB SOURCES_LIBS "src/LCalendar.cpp")
add_compile_options(-std=c++11)
#add_compile_options(-DDEBUG)
add_executable(ldate ${SOURCES})
add_library(LunarCalendar SHARED ${SOURCES_LIBS})
target_link_libraries(ldate ${PROJECT_LINK_LIBS})
